The second section of website is commitd but no completed yet

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </div>
                 
         </div>
+        <div class="second-section">
+           <h1>THis is the second section</h1>
+        </div>
     </div>
 </body>
 </html>
