two more sections have been added successfully

--- a/index.html
+++ b/index.html
@@ -26,8 +26,30 @@
                 </div>
                 
         </div>
+        <hr>
         <div class="second-section">
-           <h1>THis is the second section</h1>
+            <div class="left-box">
+                <h1>Enjoy on your TV.</h1>
+                <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
+                </p>
+             </div>
+             <div class="right-box">
+                 <img src="assets/images/feature-1.png">
+             </div>
+        </div>
+        <hr>
+        <div class="third-section">
+            <div class="third-left">
+                <img src="assets/images/feature-2.png">
+            </div>
+            <div class="third-right">
+                <h1>Download your shows to watch offline.</h1>
+                <p>Save your favorites easily and always have something to watch.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="fourth-section">
+            coming soon...................
         </div>
     </div>
 </body>
