ection 4 and section 5 have been added

--- a/index.html
+++ b/index.html
@@ -49,8 +49,24 @@
         </div>
         <hr>
         <div class="fourth-section">
-            coming soon...................
+            <h1>Watch <br> everywhere.</h1>
+            <p>Stream unlimited movies and TV<br> shows on your phone, tablet, laptop, <br>and TV.</p>
         </div>
+        <hr>
+
+        <div class="section-fifth">
+            <div class="fifth-left">
+                <img src ="assets/images/feature-4.png">
+            </div>
+            <div class="fifth-right">
+                <h1>Create profiles for kids.</h1>
+                <p>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+            </div>
+        </div>
+        <hr>
     </div>
+        <div class="sixth-section">
+            <h1>comming soon</h1>
+        </div>
 </body>
 </html>
